features section and general styling

--- a/index.html
+++ b/index.html
@@ -13,12 +13,125 @@
   </head>
   <body>
     <header>
-      <img src="assets/img/Logo-100px-02.svg" alt="VICA logo" />
+      <svg id="logo-svg"><use xlink:href="assets/img/iconos.svg#logo"></use></svg>
       <div class="header-buttons">
-        <a href="#" class="btn--small btn--outlined">Registrá tu establecimiento</a>
-        <div class="vertical-line" /></div>
-        <a href="#" class="btn--small btn--filled">Ingresar</a>
+        <a href="#" class="btn btn--sm btn--outlined btn--inverted">Registrá tu establecimiento</a>
+        <div class="vertical-line" id="header-hr" /></div>
+        <a href="#" class="btn btn--sm" id="signin-btn">Ingresar</a>
       </div>
     </header>
+  
+    <section class="hero split">
+      <div class="hero-image">
+        <img src="assets/img/Hero.png" alt="Chica sonriendo, comiendo y mirando su celular, escaneando el código QR de VICA">
+      </div>
+      <div class="hero-content container-xs">
+        <h1>Tu plataforma de pedidos online</h1>
+        <p class="text-body-1">VICA te permite administrar los pedidos y pagos en mesa y take away, brindando la mejor experiencia de compra en tu establecimiento.</p>
+        <a href="#" class="btn btn--filled">Comenzar gratis ahora</a>
+      </div>
+    </section>
+
+    <section class="features">
+      <div class="features-image">
+
+      </div>
+      <div class="features-content">
+        <div class="features-content-text container-xs">
+          <h2>¿Qué tiene VICA para vos?</h2>
+          <p class="text-body-1">En VICA nos aseguramos de lograr una interfaz integral para que brindes la mejor experiencia de compra a tus clientes.</p>
+        </div>
+        <div class="features-content-slider">
+          <div class="feature">
+            <svg id="gestion-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+            <h6>Gestión de pedidos</h6>
+            <p class="text-body-2">Podrás ver los pedidos realizados desde el panel de control y llevar la gestión de los mismos.</p>
+          </div>
+          <div class="feature">
+            <svg id="menu-digital-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+            <h6>Menú digital</h6>
+            <p class="text-body-2">Podrás agregar o quitar productos de tu menú, sus descripciones y fotos y modificar sus precios siempre que lo desees.
+            </p>
+          </div>
+          <div class="feature">
+            <svg id="pagos-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+            <h6>Pagos online</h6>
+            <p class="text-body-2">Los pagos de tus pedidos podrán realizarse de manera online sin necesidad de utilizar el efectivo si así lo querés.
+            </p>
+          </div>
+          <div class="feature">
+            <svg id="menu-visible-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+            <h6>Menú siempre visible</h6>
+            <p class="text-body-2">No es necesario que tus clientes escaneen el código QR para visualizar la carta de tu establecimiento. Tu menú estará siempre visible en la app.
+            </p>
+          </div>
+          <div class="feature">
+            <svg id="soporte-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+            <h6>Soporte las 24hs.</h6>
+            <p class="text-body-2">Te ofrecemos soporte para ayudarte a resolver cualquier inconveniente.
+
+            </p>
+          </div>
+          <div class="feature">
+            <svg id="incremento-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+            <h6>Incremento de tus ventas</h6>
+            <p class="text-body-2">Ayudamos a tu negocio en el incremento de las ventas.
+            </p>
+          </div>
+          <div class="feature">
+            <svg id="fidelizacion-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+            <h6>Fidelización con tu cliente</h6>
+            <p class="text-body-2">Buscamos que tus consumidores se vuelvan clientes habituales. ¡Sabemos cómo hacerlo!
+
+            </p>
+          </div>
+          <div class="feature">
+            <svg id="tiempos-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+            <h6>Optimizamos tus tiempos</h6>
+            <p class="text-body-2">Te ayudamos a mejorar los procesos en tu establecimiento.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="backoffice container-xs">
+      <h2>La plataforma que va a potenciar y hacer crecer tu negocio</h2>
+      <div class="backoffice-slider">
+        
+      </div>
+    </section>
+
+    <section class="testimonials">
+      <div class="testimonials-head">
+        <h3>Sé parte de los establecimientos que ya se digitalizaron junto a Vica. <span class="text--orange">¡Sumate vos también!</span></h3>
+        <a href="#" class="btn btn--sm">Registrá tu establecimiento</a>
+      </div>
+      <div class="testimoniasl-content">
+        <div class="testimonial">
+          <img src="" alt="">
+          <h6>Juan V.</h6>
+          <p class="text-body-1">Gerente Comercial</p>
+          <svg></svg>
+          <p class="text-body-1">La facilidad de uso de VICA y su moderna tecnología nos permitieron incrementar las ventas un 30% en muy poco tiempo. ¡Lo recomiendo totalmente!</p>
+        </div>
+        <div class="testimonial">
+          <img src="" alt="">
+          <h6>María Eugenia T.</h6>
+          <p class="text-body-1">CEO</p>
+          <svg></svg>
+          <p class="text-body-1">La facilidad de uso de VICA y su moderna tecnología nos permitieron incrementar las ventas un 30% en muy poco tiempo. ¡Lo recomiendo totalmente!</p>
+        </div>
+        <div class="testimonial">
+          <img src="" alt="">
+          <h6>Andrés M.</h6>
+          <p class="text-body-1">Director Ejecutivo</p>
+          <svg></svg>
+          <p class="text-body-1">La facilidad de uso de VICA y su moderna tecnología nos permitieron incrementar las ventas un 30% en muy poco tiempo. ¡Lo recomiendo totalmente!</p>
+        </div>
+      </div>
+    </section>
+
+    
   </body>
 </html>
