--- a/index.html
+++ b/index.html
@@ -49,66 +49,72 @@
           <p class="text-body-1">En VICA nos aseguramos de lograr una interfaz integral para que brindes la mejor experiencia de compra a tus clientes.</p>
         </div>
         <div class="features-content-slider">
-          <div class="feature">
-            <svg id="gestion-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
-            <h6>Gestión de pedidos</h6>
-            <p class="text-body-2">Podrás ver los pedidos realizados desde el panel de control y llevar la gestión de los mismos.</p>
-          </div>
-          <div class="feature">
-            <svg id="menu-digital-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
-            <h6>Menú digital</h6>
-            <p class="text-body-2">Podrás agregar o quitar productos de tu menú, sus descripciones y fotos y modificar sus precios siempre que lo desees.
-            </p>
-          </div>
-          <div class="feature">
-            <svg id="pagos-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
-            <h6>Pagos online</h6>
-            <p class="text-body-2">Los pagos de tus pedidos podrán realizarse de manera online sin necesidad de utilizar el efectivo si así lo querés.
-            </p>
-          </div>
-          <div class="feature">
-            <svg id="menu-visible-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
-            <h6>Menú siempre visible</h6>
-            <p class="text-body-2">No es necesario que tus clientes escaneen el código QR para visualizar la carta de tu establecimiento. Tu menú estará siempre visible en la app.
-            </p>
-          </div>
-          <div class="feature">
-            <svg id="soporte-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
-            <h6>Soporte las 24hs.</h6>
-            <p class="text-body-2">Te ofrecemos soporte para ayudarte a resolver cualquier inconveniente.
+          <div class="features-cards">
+            <div style="width: 24px; height: 10px; background: transparent; flex-shrink: 0;"></div>
+            <div class="feature" id="feature-1">
+              <svg id="gestion-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+              <h6>Gestión de pedidos</h6>
+              <p class="text-body-2">Podrás ver los pedidos realizados desde el panel de control y llevar la gestión de los mismos.</p>
+            </div>
+            <div class="feature" id="feature-2">
+              <svg id="menu-digital-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+              <h6>Menú digital</h6>
+              <p class="text-body-2">Podrás agregar o quitar productos de tu menú, sus descripciones y fotos y modificar sus precios siempre que lo desees.
+              </p>
+            </div>
+            <div class="feature" id="feature-3">
+              <svg id="pagos-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+              <h6>Pagos online</h6>
+              <p class="text-body-2">Los pagos de tus pedidos podrán realizarse de manera online sin necesidad de utilizar el efectivo si así lo querés.
+              </p>
+            </div>
+            <div class="feature" id="feature-4">
+              <svg id="menu-visible-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+              <h6>Menú siempre visible</h6>
+              <p class="text-body-2">No es necesario que tus clientes escaneen el código QR para visualizar la carta de tu establecimiento. Tu menú estará siempre visible en la app.
+              </p>
+            </div>
+            <div class="feature" id="feature-5">
+              <svg id="soporte-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+              <h6>Soporte las 24hs.</h6>
+              <p class="text-body-2">Te ofrecemos soporte para ayudarte a resolver cualquier inconveniente.
+  
+              </p>
+            </div>
+            <div class="feature" id="feature-6">
+              <svg id="incremento-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+              <h6>Incremento de tus ventas</h6>
+              <p class="text-body-2">Ayudamos a tu negocio en el incremento de las ventas.
+              </p>
+            </div>
+            <div class="feature" id="feature-7">
+              <svg id="fidelizacion-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+              <h6>Fidelización con tu cliente</h6>
+              <p class="text-body-2">Buscamos que tus consumidores se vuelvan clientes habituales. ¡Sabemos cómo hacerlo!
+  
+              </p>
+            </div>
+            <div class="feature" id="feature-8">
+              <svg id="tiempos-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
+              <h6>Optimizamos tus tiempos</h6>
+              <p class="text-body-2">Te ayudamos a mejorar los procesos en tu establecimiento.
+              </p>
+            </div>
+            <div style="width: 24px; height: 10px; background: transparent; flex-shrink: 0;"></div>
 
-            </p>
           </div>
-          <div class="feature">
-            <svg id="incremento-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
-            <h6>Incremento de tus ventas</h6>
-            <p class="text-body-2">Ayudamos a tu negocio en el incremento de las ventas.
-            </p>
-          </div>
-          <div class="feature">
-            <svg id="fidelizacion-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
-            <h6>Fidelización con tu cliente</h6>
-            <p class="text-body-2">Buscamos que tus consumidores se vuelvan clientes habituales. ¡Sabemos cómo hacerlo!
-
-            </p>
-          </div>
-          <div class="feature">
-            <svg id="tiempos-svg"><use xlink:href="assets/img/iconos.svg#gestion"></use></svg>
-            <h6>Optimizamos tus tiempos</h6>
-            <p class="text-body-2">Te ayudamos a mejorar los procesos en tu establecimiento.
-            </p>
+          <div class="indicator text--center" id="feature-indicator">
+            <a href="#feature-1"></a>
+            <a href="#feature-2"></a>
+            <a href="#feature-3"></a>
+            <a href="#feature-4"></a>
+            <a href="#feature-5"></a>
+            <a href="#feature-6"></a>
+            <a href="#feature-7"></a>
+            <a href="#feature-8"></a>
           </div>
         </div>
-        <div class="indicator text--center" id="feature-indicator">
-          <a href="#feature-1"></a>
-          <a href="#feature-2"></a>
-          <a href="#feature-3"></a>
-          <a href="#feature-4"></a>
-          <a href="#feature-5"></a>
-          <a href="#feature-6"></a>
-          <a href="#feature-7"></a>
-          <a href="#feature-8"></a>
-        </div>
+        
       </div>
     </section>
 
