Changed Hero Image / Added Whatsapp Button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <script defer src="js/testimonials.js"></script>
+    <script defer src="js/whatsapp.js"></script>
   </head>
   <body>
     <header>
@@ -25,13 +26,17 @@
     <div class="background">
       <img src="assets/img/Background-figure.svg" alt="">
     </div>
+
+    <div class="whatsapp">
+      <svg id="whatsapp-svg"><use xlink:href="assets/img/iconos.svg#whatsapp"></use></svg>
+    </div>
   
     <main>
       <section class="hero split">
         <div class="hero-image">
-          <img src="assets/img/Hero.png" alt="Chica sonriendo, comiendo y mirando su celular, escaneando el código QR de VICA">
+          <img src="assets/img/HeroMobile.png" alt="Chica sonriendo, comiendo y mirando su celular, escaneando el código QR de VICA">
         </div>
-        <div class="hero-content container-xs">
+        <div class="hero-content container-xs flow-content">
           <h1 class="text--orange text--bold-xs">Tu plataforma <br> de pedidos online</h1>
           <p class="text-body-1">VICA te permite administrar los pedidos y pagos en mesa y take away, brindando la mejor experiencia de compra en tu establecimiento.</p>
           <a href="#" class="btn btn--l btn--filled">Comenzar gratis ahora</a>
@@ -48,8 +53,8 @@
             <a href="#interfaz-4"></a>
           </div>
         </div>
-        <div class="features-content">
-          <div class="features-content-text container-xs">
+        <div class="features-content flow-content">
+          <div class="features-content-text container-xs flow-content">
             <h2>¿Qué tiene VICA para vos?</h2>
             <p class="text-body-1">En VICA nos aseguramos de lograr una interfaz integral para que brindes la mejor experiencia de compra a tus clientes.</p>
           </div>
@@ -124,7 +129,7 @@
       </section>
   
       <section class="testimonials">
-        <div class="testimonials-head container-xs text--center">
+        <div class="testimonials-head container-xs text--center flow-content">
           <h3>Sé parte de los establecimientos que ya se digitalizaron junto a Vica. <span class="text--orange">¡Sumate vos también!</span></h3>
           <a href="#" class="btn btn--sm">Registrá tu establecimiento</a>
         </div>
@@ -162,7 +167,7 @@
         </div>
       </section>
   
-      <section class="backoffice container-xs text--center">
+      <section class="backoffice container-xs text--center flow-content">
         <h2>La plataforma que va a potenciar y hacer crecer tu negocio</h2>
         <div class="backoffice-slider">
           <img src="assets/img/Backoffice.png" alt="Backoffice: Plataforma Web Vica">
