--- a/index.html
+++ b/index.html
@@ -44,19 +44,22 @@
   
     <main>
       <section class="hero split">
-        <div class="hero-image">
-          <img src="assets/img/HeroMobile.png" alt="Chica sonriendo, comiendo y mirando su celular, escaneando el código QR de VICA">
-        </div>
+        
         <div class="hero-content container-xs flow-content">
           <h1 class="text--orange text--bold-xs">Tu plataforma <br> de pedidos online</h1>
           <p class="text-body-1">VICA te permite administrar los pedidos y pagos en mesa y take away, brindando la mejor experiencia de compra en tu establecimiento.</p>
           <a href="#" class="btn btn--l btn--filled">Comenzar gratis ahora</a>
         </div>
+        <div class="hero-image">
+          <img src="assets/img/HeroMobile.png" id="hero-mobile-img" alt="Chica sonriendo, comiendo y mirando su celular, escaneando el código QR de VICA">
+          <img src="assets/img/Hero1280.png" id="hero-1280-img" alt="Chica sonriendo, comiendo y mirando su celular, escaneando el código QR de VICA">
+        </div>
       </section>
   
-      <section class="features">
+      <section class="features split">
         <div class="features-image text--center">
-          <img src="assets/img/Cellphone.png" alt="Interfaz de la aplicación VICA">
+          <img src="assets/img/CellphoneMobile.png" id="cellphone-mobile-img" alt="Interfaz de la aplicación VICA">
+          <img src="assets/img/Cellphone1280.png" id="cellphone-1280-img" alt="Interfaz de la aplicación VICA">
           <div class="indicator" id="interfaz-indicator">
             <a href="#interfaz-1"></a>
             <a href="#interfaz-2"></a>
