--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/owl.theme.default.css" />
     <script src="js/jquery.min.js"></script>
     <script defer src="js/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="styles/tiny-slider.css">
   </head>
 
   <body>
@@ -161,43 +162,44 @@
           </div>
         </div>
       </section>
-  
+
       <section class="testimonials">
         <div class="testimonials-head container-xs text--center flow-content">
           <h3>Sé parte de los establecimientos que ya se digitalizaron junto a Vica. <span class="text--orange">¡Sumate vos también!</span></h3>
           <a href="#" class="btn btn--sm">Registrá tu establecimiento</a>
         </div>
         <div class="testimonials-content text--center">
-          <div class="testimonials-cards">
-            <div class="testimonial" id="testimonial-1">
-              <img src="" alt="">
-              <h6>Juan V.</h6>
-              <p class="text-body-1">Gerente Comercial</p>
+          <div class="my-slider">
+            <div class="testimonial flow-content flow-content--s" id="testimonial-1">
+              <div class="testimonial-img" style="background-image: url('../assets/img/Testimonial-1.jpg');"></div>
+              <div class="testimonial-name">
+                <h6>Juan V.</h6>
+                <p class="text-body-1">Gerente Comercial</p>
+              </div>
               <svg class="comillas-svg"><use xlink:href="assets/img/iconos.svg#comillas"></use></svg>
-              <p class="text-body-1">La facilidad de uso de VICA y su moderna tecnología nos permitieron incrementar las ventas un 30% en muy poco tiempo. ¡Lo recomiendo totalmente!</p>
+              <p class="text-body-1">La facilidad de uso de VICA <br> y su moderna tecnología nos permitieron incrementar <br>las ventas un 30% en <br>muy poco tiempo. <br>¡Lo recomiendo totalmente!</p>
             </div>
-            <div class="testimonial" id="testimonial-2">
-              <img src="" alt="">
-              <h6>María Eugenia T.</h6>
-              <p class="text-body-1">CEO</p>
+            <div class="testimonial flow-content flow-content--s" id="testimonial-2">
+              <div class="testimonial-img" style="background-image: url('../assets/img/Testimonial-2.jpg');"></div>
+              <div class="testimonial-name">
+                <h6>María Eugenia T.</h6>
+                <p class="text-body-1">CEO</p>
+              </div>
               <svg class="comillas-svg"><use xlink:href="assets/img/iconos.svg#comillas"></use></svg>
   
               <p class="text-body-1">VICA nos ha servido mucho frente a esta nueva normalidad. Nos ayuda a organizar los pedidos y a brindarle a nuestros clientes el mejor sevicio optimizando los tiempos. Es una plataforma muy fácil de usar.</p>
             </div>
-            <div class="testimonial" id="testimonial-3">
-              <img src="" alt="">
-              <h6>Andrés M.</h6>
-              <p class="text-body-1">Director Ejecutivo</p>
+            <div class="testimonial flow-content flow-content--s" id="testimonial-3">
+              <div class="testimonial-img" style="background-image: url('../assets/img/Testimonial-3.jpeg');"></div>
+              <div class="testimonial-name">
+                <h6>Andrés M.</h6>
+                <p class="text-body-1">Director Ejecutivo</p>
+              </div>
               <svg class="comillas-svg"><use xlink:href="assets/img/iconos.svg#comillas"></use></svg>
-  
               <p class="text-body-1">Es la mejor plataforma que hemos usado en mucho tiempo. Hemos probado otras y la verdad que ninguna es tan fácil de entender como VICA. Además, nuestros clientes están felices de realizar pedidos por la aplicación. Sin dudas, lo mejor del mercado.</p>
             </div>
           </div>
-          <div class="indicator" id="testimonials-indicator">
-            <a href="#testimonial-1"></a>
-            <a href="#testimonial-2"></a>
-            <a href="#testimonial-3"></a>
-          </div>
+          
         </div>
       </section>
   
@@ -244,5 +246,17 @@
         });
       });
     </script>
+
+<script type="module">
+  import {tns} from './js/tiny-slider.js';
+
+  var slider = tns({
+    container: '.my-slider',
+    items: 1,
+    slideBy: 'page',
+    controls: false,
+    navPosition: 'bottom',
+  });
+  </script>
   </body>
 </html>
