Finished Testimonials Responsive

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <a href="#" class="btn btn--sm">Registrá tu establecimiento</a>
         </div>
         <div class="testimonials-content text--center">
-          <div class="my-slider">
+          <div class="testimonial-slider">
             <div class="testimonial flow-content flow-content--s" id="testimonial-1">
               <div class="testimonial-img" style="background-image: url('../assets/img/Testimonial-1.jpg');"></div>
               <div class="testimonial-name">
@@ -257,7 +257,7 @@
   import {tns} from './js/tiny-slider.js';
 
   var slider = tns({
-    container: '.my-slider',
+    container: '.testimonial-slider',
     items: 1,
     slideBy: 'page',
     controls: false,
