Fixed Buttons Responsive

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <section class="testimonials">
         <div class="testimonials-head container-xs text--center flow-content">
           <h3>Sé parte de los establecimientos que <br class="br--1280">ya se digitalizaron junto a Vica.<br class="br--1280"> <span class="text--orange">¡Sumate vos también!</span></h3>
-          <a href="#" class="btn btn--sm">Registrá tu establecimiento</a>
+          <a href="#" class="btn btn--block">Registrá tu establecimiento</a>
         </div>
         <div class="testimonials-content text--center">
           <div class="testimonial-slider">
