Backoffice Slider Mobile OK

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </div>
       </section>
 
-      <section class="backoffice container-xs text--center flow-content">
+      <!-- <section class="backoffice container-xs text--center flow-content">
         <h2>La plataforma que va a potenciar y hacer crecer tu negocio</h2>
         <div class="backoffice-slider-container">
           <div class="backoffice-slider">
@@ -174,6 +174,29 @@
             <div class="backoffice-slide" id="backoffice-3">
             </div>
             <div class="backoffice-slide" id="backoffice-4">
+            </div>
+          </div>
+        </div>
+      </section> -->
+
+      <section class="backoffice container-xs text--center flow-content">
+        <h2>La plataforma que va a potenciar y hacer crecer tu negocio</h2>
+        <div class="backoffice-slider-container">
+          <img src="assets/img/Backoffice.png" alt="">
+          <div class="backoffice-slides-container">
+            <div class="backoffice-slider">
+              <div class="backoffice-slide" id="backoffice-1">
+                <img src="assets/img/Backoffice-1.jpeg">
+              </div>
+              <div class="backoffice-slide" id="backoffice-2">
+                <img src="assets/img/Backoffice-1.jpeg">
+              </div>
+              <div class="backoffice-slide" id="backoffice-3">
+                <img src="assets/img/Backoffice-1.jpeg">
+              </div>
+              <div class="backoffice-slide" id="backoffice-4">
+                <img src="assets/img/Backoffice-1.jpeg">
+              </div>
             </div>
           </div>
         </div>
@@ -277,7 +300,6 @@
     controls: false,
     navPosition: 'bottom',
     loop: false,
-    
   });
   </script>
   </body>
