--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
+    <script src="js/index.js"></script>
     <script defer src="js/testimonials.js"></script>
     <script defer src="js/whatsapp.js"></script>
     <script defer src="js/modal.js"></script>
@@ -25,6 +26,12 @@
   </head>
 
   <body>
+    <div class="loading">
+      <h3 class="animate__animated animate__flash">
+        Cargando...
+      </h3>
+    </div>
+
     <header>
       <svg id="logo-svg">
         <use xlink:href="assets/img/iconos.svg#logo"></use>
@@ -79,6 +86,9 @@
           <a href="#" class="btn btn--l btn--filled">Comenzar gratis ahora</a>
         </div>
         <div class="hero-image">
+          <div id="hero-tube-svg">
+            
+          </div>
           <img
             src="assets/img/HeroMobile.png"
             id="hero-mobile-img"
