Hero1280 animate fixed / Added tent

--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
     <script defer src="js/modal.js"></script>
     <link rel="stylesheet" href="styles/owl.carousel.css" />
     <link rel="stylesheet" href="styles/owl.theme.default.css" />
-    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script> 
     <script defer src="js/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="styles/tiny-slider.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    <link rel="stylesheet" href="styles/animate.css" />
   </head>
 
   <body>
@@ -86,9 +83,7 @@
           <a href="#" class="btn btn--l btn--filled">Comenzar gratis ahora</a>
         </div>
         <div class="hero-image">
-          <div id="hero-tube-svg">
-            
-          </div>
+          <div id="hero-tube-png"></div>
           <img
             src="assets/img/HeroMobile.png"
             id="hero-mobile-img"
@@ -99,6 +94,7 @@
             id="hero-1280-img"
             alt="Chica sonriendo, comiendo y mirando su celular, escaneando el código QR de VICA"
           />
+          <div id="hero-tent-png"></div>
         </div>
       </section>
 
